connected to Oshi via gradle and adjusted my codes to reflect that